(lang dune 3.16)
(name futhark_gw)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name futhark_gw)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune domainslib
 ppx_deriving npy ctypes ctypes-foreign domainslib
)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
